@@ -15,3 +15,4 @@ documentation/*~
 /images/1870-REP02/
 /images/18QQ-REP02/
 /images/18KCS-REP02/
+/images/18EU-REP02/
